
2016-02-01 Ron Norman <rjn@inglenet.com>
	* fileio.c fixed to call cob_set_exception for the EXTFH interface

2016-01-01 Ron Norman <rjn@inglenet.com>

	* common.c,common.h,coblocal.h,termio.c: 
	  added cob_set_runtime_option routine to allow TRACE and/or DISPLAY
	  UPON PRINTER output to be redirected to a specific (FILE*)

2015-10-24  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (conf_runtime_error): add function for configuration specific
	  errors and tweaked the messages
	* common.c (set_config_val): added possible values for gc_conf.enums
	  to error messages; added check of maximum values for ENV_SIZE
	* common.c (cob_load_config_file): if include file is not found prefix
	  it with path of current loaded configuration file
	* common.c: tweaked output for --runtime-env and added function
	  (set_config_val_by_name) for overriding default values (used for USERNAME)

2015-10-10  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c [WIN32][MINGW]: tweaking of additional environment settings

2015-10-10 Ron Norman <rjn@inglenet.com>

	* common.c: added code to report additional environment settings

2015-05-14  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (cb_config_entry): remove redundant aliases !copy/(un)set/!anything
	* common.c: add ACUCOBOL configuration aliases LOGICAL_CANCELS
	  (= !COB_PHYSICAL_CANCEL) and STRIP_TRAILING_SPACES (= !COB_LS_FIXED)

2015-05-12  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (cob_load_config_file, cob_load_config): respect environment
	  COB_CONFIG_DIR when loading runtime configuration

2015-05-12  Ron Norman <rjn@inglenet.com> 

2015-09-16  Ron Norman <rjn@inglenet.com>

	* fileio.c fixed coding error related to support for EXTFH
	  It was returning the index number as 1 relative instead of 0 relative

2015-07-07  Ron Norman
	* Accept env var COB_CURRENT_DATE and runtime.cfg current_date